<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_detect</name>
  <version>0.0.0</version>
  <description>Lab_project</description>
  <maintainer email="desaisar@msu.edu">desaisar</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rclpy.node</exec_depend>
  <exec_depend>rclpy.parameter</exec_depend>
  <exec_depend>nav_msgs.msg</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>dnn_detect</exec_depend>
  <exec_depend>sensor_msgs.msg</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>torchvision</exec_depend>
  <exec_depend>random</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>PIL</exec_depend>
  <exec_depend>torchvision.transforms</exec_depend>
  <exec_depend>matplotlib.pyplot</exec_depend>
  <exec_depend>sys</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
